--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 #The contributors of this project are:
 
 Badreddine Bentiah <badrechahide@gmail.com>
-ABDELHAK ZARHLOUL
+Abdelhak Zarhloul <zaghlouleabdelhak@gmail.com>
 Oussama Oukrid <oukrid.oussama@gmail.com>
 ```
